--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
-    "react": "^17.0.2",
+    "react": "^18.0.0",
     "react-date-object": "^2.1.5",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-test-renderer": "^18.0.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@types/jest": "^27.4.0",
+    "@types/react": "^18.0.0",
     "ts-jest": "^27.1.3"
   }
 }
